# icub-moveit

./: README.md
icub_controller_interface/: CMakeLists.txt  package.xml
icub_description/: CMakeLists.txt  package.xml
icub_description/launch/: display.launch
icub_description/meshes/: bowl.stl  spoon.stl  table.stl
icub_description/meshes/bottle/: bottle.dae
icub_description/rviz/: display_urdf.rviz
icub_description/urdf/: attach_obj.xacro  icub_2_5.urdf  icub_bottle.urdf  icub_mixing.urdf.xacro  icub_paris1.urdf  icub_simple.urdf
icub_moveit/config/: ICub.srdf  bdmp_planning.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml
icub_moveit/launch/: bdmp_planning_pipeline.launch  demo.launch  fake_moveit_controller_manager.launch  move_group.launch  moveit.rviz  trajectory_execution.launch
icub_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
icub_moveit_config/config/: bdmp_planning.yaml  fake_controllers.yaml  icub.srdf  joint_limits.yaml  ompl_planning.yaml
icub_moveit_config/launch/: bdmp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
icub_ros/: CMakeLists.txt  package.xml
yarp_msgs/: CMakeLists.txt  package.xml
