<package>
  <name>icub_controller_interface</name>
  <version>0.0.0</version>
  <description>icub_controller_interface</description>
  <maintainer email="ruihortafigueiredo@gmail.com">Rui Figueiredo</maintainer>
  <author email="ruihortafigueiredo@gmail.com">Rui Figueiredo</author>
  <author email="dunno@dunno.com">Filipe Veiga</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>yarp_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>yarp_msgs</run_depend>
  <run_depend>control_msgs</run_depend>

</package>


