<package>
  <name>yarp_msgs</name>
  <version>0.0.0</version>
  <description>yarp_msgs</description>
  <author email="dunno@dunno.com">Filipe Veiga</author>
  <maintainer email="dunno@dunno.com">Filipe Veiga</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


